--- a/.github/workflows/debugonly.yml
+++ b/.github/workflows/debugonly.yml
@@ -27,13 +27,9 @@ jobs:
       run: bash ./gradlew app:testDebug --tests=com.skripsi.andra.cekvalidTest
       
     - name: Run Unit Tests lupapassTest
-      run: bash ./gradlew app:testDebug --tests=com.skripsi.andra.lupapassTest
+      run: bash ./gradlew app:testDebug --tests=com.skripsi.andra.ModelTest
       
-    - name: Run Unit Tests SigninTest
-      run: bash ./gradlew app:testDebug --tests=com.skripsi.andra.SigninTest
-      
-    - name: Run Unit Tests signupTest
-      run: bash ./gradlew app:testDebug --tests=com.skripsi.andra.signupTest
+    
       
     - name: Build apk
       run: ./gradlew assembleDebug
